# payment-processing-service

./: .gitignore  README.md  docker-compose.yml
account-service/: .env  Cargo.toml  Dockerfile
account-service/migrations/: 001_init.sql
account-service/src/: error.rs  handlers.rs  main.rs  middleware.rs  models.rs
audit-service/: .env  Cargo.toml  Dockerfile
audit-service/migrations/: 001_init.sql
audit-service/src/: auth.rs  config.rs  handlers.rs  main.rs  middleware.rs  models.rs
auth-service/: .env  Cargo.toml  Dockerfile
auth-service/src/: auth.rs  handlers.rs  main.rs  middleware.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/component/auth/login/: login.css  login.html  login.ts
frontend/src/app/component/auth/register/: register.css  register.html  register.ts
frontend/src/app/component/dashboard/accounts/: accounts.css  accounts.html  accounts.ts
frontend/src/app/component/dashboard/create-account/: create-account.css  create-account.html  create-account.ts
frontend/src/app/component/dashboard/transactions/: transactions.css  (+2 more)
frontend/src/app/guard/: auth.guard.ts  auth.interceptor.ts  guest.guard.ts
frontend/src/app/service/: api.service.ts  auth.service.ts
ledger-service/: Cargo.toml  Dockerfile
ledger-service/migrations/: 001_init.sql
ledger-service/src/: auth.rs  handlers.rs  main.rs  models.rs
payment-service/: .env  Cargo.toml
payment-service/migrations/: 001_init.sql
payment-service/src/: db.rs  handlers.rs  main.rs  models.rs
saga-orchestrator/: .env  Cargo.toml  Dockerfile
saga-orchestrator/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs
