[package]
name = "saga-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }